Change methods, add html files,

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -16,5 +16,15 @@ Pokaż artykuły gospodarstwa domowego -> Kliknij
 <a href="/products?category=ITEMS">TUTAJ</a><br/>
 
 
+<h1>Dodawanie produktów</h1>
+
+<form action="/add" method="post">
+    <input type="text" name="nazwa" placeholder="Nazwa">
+    <input type="text" name="cena" placeholder="Cena">
+    <input type="text" name="kategoria" placeholder="Kategoria">
+
+    <input type="submit" value="Dodaj!">
+</form>
+
 </body>
 </html>
