Change methods and html file.

--- a/src/main/resources/static/err.html
+++ b/src/main/resources/static/err.html
@@ -5,6 +5,6 @@
     <title>Niepoprawnie!</title>
 </head>
 <body>
-<h1>Nowy produkt ma kategorię inna niż dostępne!</h1>
+<h1>Produkt musi posiadać nazwę oraz cenę!</h1>
 </body>
 </html>
